[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/Level1/Sprites/3rdTierChest.png" type="Texture" id=1]
[ext_resource path="res://Levels/Level1/Sprites/3rdTierChest.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.3861, 12.618 )

[sub_resource type="Animation" id=1]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickUpArea:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1024 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PickUpArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickUpArea:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PickUpArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickUpArea:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1024 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PickUpArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 7.2481

[node name="3rdTierChest" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.395554, 2.61797 )
shape = SubResource( 4 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Open = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="PickUpArea" type="Area2D" parent="."]
position = Vector2( -12.5694, -12.5859 )
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2( 9.78978, 18.4773 )
shape = SubResource( 5 )

[node name="OpenTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="OpenTimer2" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="OpenTimer3" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="PickUpArea" to="." method="_on_PickUpArea_area_entered"]
[connection signal="timeout" from="OpenTimer" to="." method="_on_OpenTimer_timeout"]
[connection signal="timeout" from="OpenTimer2" to="." method="_on_OpenTimer2_timeout"]
[connection signal="timeout" from="OpenTimer3" to="." method="_on_OpenTimer3_timeout"]
